## Process this file with automake to produce Makefile.in

if USE_GMAKE
  MAKE = gmake
endif

# build subdirectories
SUBDIRS = include/HepPID include/HepPDT src/HepPID src/HepPDT data \
         tests/HepPID tests/HepPDT doc/HepPID doc/HepPDT \
         examples/HepPID examples/HepPDT examples/data 
# list all subdirectories - for distribution and cleaning
DIST_SUBDIRS = include/HepPID include/HepPDT src/HepPID src/HepPDT data \
         tests/HepPID tests/HepPDT doc/HepPID doc/HepPDT \
         examples/HepPID examples/HepPDT examples/data
